# json-sort

./: .gitignore  .travis.yml  LICENSE  README.md  README.rst  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  setup.py
docs/: conf.py  index.rst
src/json_sort/: __init__.py  lib.py  scripts.py
tests/: __init__.py  conftest.py  test_lib.py  test_scripts.py
